# ChangeLog for games-arcade/digger
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/digger/ChangeLog,v 1.4 2004/06/24 22:04:21 agriffis Exp $

  25 Sep 2003; Chuck Short <zul@gentoo.org> digger-20020314.ebuild:
  Added sparc to keywords.

  06 Dec 2003; Mark Guertin <gerk@gentoo.org> :
  Added ppc to keywords

*digger-20020314 (28 Oct 2002)

  01 Dec 2002; Mike Frysinger <vapier@gentoo.org> :
  Added games eclass support

  28 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Dirk-Jan Heijs <heijs@phys.rug.nl>.