@@ -1,5 +1,5 @@
-MD5 c6628a33358e69bc63bded79c941bb82 digger-20020314.ebuild 650
-MD5 167af9784c26ac4ec155c4bf34fc02fb ChangeLog 623
-MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
-MD5 15b365526b587190d06a4d96fd7bf042 files/digest-digger-20020314 66
+MD5 f63c6a6a81b1caa471cea5c280aad56c ChangeLog 724
+MD5 d44a98a9ce6291ce87f9bc821a3189bb digger-20020314.ebuild 656
 MD5 8d4e9f9a6bc09bad69af51849e57a6ec files/20020314-gcc3.patch 327
+MD5 15b365526b587190d06a4d96fd7bf042 files/digest-digger-20020314 66
+MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
