@@ -1,6 +1,9 @@
 # ChangeLog for games-arcade/digger
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/digger/ChangeLog,v 1.4 2004/06/24 22:04:21 agriffis Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/digger/ChangeLog,v 1.5 2006/05/03 18:11:59 corsair Exp $
+
+  03 May 2006; Markus Rothe <corsair@gentoo.org> digger-20020314.ebuild:
+  Added ~ppc64; bug #132091
 
   25 Sep 2003; Chuck Short <zul@gentoo.org> digger-20020314.ebuild:
   Added sparc to keywords.
